[package]
name = "claude"
version = "0.1.0"
authors = ["hendrik@hoodie.de", "tberry@student.neumont.edu"]
description = "A little library to represent money."
repository = "https://github.com/hoodie/claude-rs"
keywords = ["Currency", "Money", "Monet"]
license = "MPL-2.0"

[dependencies]
regex = { version = "0.1", optional = true }

[features]
parsing = ["regex"]
