[package]
name = "claude"
version = "0.3.1"
authors = ["hendrik@hoodie.de", "tberry@student.neumont.edu"]
description = "A little library to represent money."
repository = "https://github.com/hoodie/claude-rs"
keywords = ["Currency", "Money", "Monet"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
regex = { version = "1", optional = true }

serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[features]
default = []
serialization = ["serde", "serde_json", "serde_derive"]
parsing = ["regex"]

[[example]]
name = "serialize"
required-features = ["serialization"]

[[example]]
name = "display"

[[example]]
name = "initialization"
